Add KMSPICO Office 2016

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="body">
+<div *ngIf="login" class="body">
   <div class="login-container">
     <h2>Đăng Nhập
       <div *ngIf="success" style="color: green;">Thành công</div>
