--- a/src/app/software/software.component.html
+++ b/src/app/software/software.component.html
@@ -27,7 +27,18 @@
         <td>2023</td>
         <td><a href="https://drive.google.com/file/d/1bAzkj1qEgUzmJOF5Cg3Zrb_tTJdt5KpX/view?usp=drive_link">Dowload</a></td>
       </tr>
+      <tr style="cursor: default;">
+        <th scope="row">4</th>
+        <td>KMSPICO_05466</td>
+        <td>2023</td>
+        <td><a href="https://drive.google.com/file/d/1Iiu7r30JqR-gLrbn1D0y5AnJKe6ok92j/view?usp=drive_link">Dowload</a></td>
+      </tr>
+      <tr style="cursor: default;">
+        <th scope="row">4</th>
+        <td>Microsoft office 2016.zip</td>
+        <td>2016</td>
+        <td><a href="https://drive.google.com/file/d/1QMbsQANktVj8233b2fleN4cgG3mWlbO8/view?usp=drive_link">Dowload</a></td>
+      </tr>
     </tbody>
   </table>
-
 </div>
