--- a/src/app/software/software.component.scss
+++ b/src/app/software/software.component.scss
@@ -1,6 +1,3 @@
-// .container{
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   background-color: #9ADCF2;
-// }
+.container{
+  padding-top: 100px;
+}
